--- a/scss/_option.scss
+++ b/scss/_option.scss
@@ -41,6 +41,11 @@
         border-radius: 0.8rem;
         font-size: 1.6rem;
         font-weight: 600;
+        &:hover{
+            cursor: pointer;
+            background: #f9ceb3;
+        }
+
     }
 }
 .option__card{
@@ -73,6 +78,10 @@
         border-radius: 0.8rem;
         font-size: 1.6rem;
         font-weight: 600;
+        &:hover{
+            cursor: pointer;
+            background: #f9ceb3;
+        }
     }
 }
 .option__div{
